# CellCard-LinkML

./: 404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
Activity/: index.html
Agent/: index.html
AttributeValue/: index.html
Boolean/: index.html
Bytes/: index.html
CellCard/: index.html
Database/: index.html
Date/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
ImageValue/: index.html
Integer/: index.html
LanguageCode/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OntologyClass/: index.html
PersonValue/: index.html
QuantityValue/: index.html
String/: index.html
TextValue/: index.html
Time/: index.html
Unit/: index.html
Uri/: index.html
Uriorcurie/: index.html
UrlValue/: index.html
about/: index.html
acted_on_behalf_of/: index.html
alternative_descriptions/: index.html
alternative_identifiers/: index.html
alternative_names/: index.html
alternative_titles/: index.html
anatomical_location/: index.html
biomarkers/: index.html
cell_card_set/: index.html
cell_hierarchy/: index.html
cell_images/: index.html
cell_line_cells/: index.html
cellcard/: index.html
cellcard-core/: index.html
clinical_significance/: index.html
connections_and_vicinity/: index.html
copyright/: index.html
description/: index.html
description_images/: index.html
display_order/: index.html
docs/: README.md
(+59 files in other folders)
