[tool.poetry]
name = "cellcard_schema"
version = "0.0.0"
description = "schema for cell cards"
authors = ["Bill Duncan <wdduncan@gmail.com>"]
license = "CC0"
include = ["README.md", "src/linkml", "project"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry.dev-dependencies]
linkml = "^1.2.6"
mkdocs-material = "^8.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
